--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,8 +1,8 @@
-<header class="flex items-center justify-between p-4 mb-4 ">
-    <span class="text-2xl text-white">
-        <a href="/">LearnToCode.fyi</a>
-    </span>
+<header class="flex items-center p-4 mb-4">
     <nav class="flex gap-4">
+        <a class="underline text-gray-200" href="/">
+            Home
+        </a>
         <a class="underline text-gray-200" href="/survey">
             Survey
         </a>
