--- a/partials/singlechoice.html
+++ b/partials/singlechoice.html
@@ -1,11 +1,11 @@
 <div id="question">
     <form class="rounded-lg border border-gray-500 shadow-sm bg-gray-800 my-4 p-4" hx-post="/survey/{{.ID}}"
         hx-target="#question">
-        <h3 class="text-2xl font-semibold leading-none tracking-tight text-white">
-            {{.SingleSelectQuestion.Question}}
+        <h3 class="text-2xl font-semibold leading-none tracking-tight text-white mb-2">
+            {{.ChoiceQuestion.Question}}
         </h3>
         <div class="p-6 text-gray-200">
-            {{range $index, $answer := .SingleSelectQuestion.Answers}}
+            {{range $index, $answer := .ChoiceQuestion.Answers}}
             <div>
                 <input id="radio{{$index}}" type="radio" name="answer" value="{{$answer}}">
                 <label for="radio{{$index}}" class="ml-2">
