fix responsiveness and multi choice bug

--- a/cmd/app/partials/head.html
+++ b/cmd/app/partials/head.html
@@ -15,4 +15,5 @@
             }, 1000);
         };
     </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
