--- a/cmd/app/partials/thanks.html
+++ b/cmd/app/partials/thanks.html
@@ -4,7 +4,7 @@
         Thank you so much for completing this year's survey! Your answers have been recorded safely.
     </p>
     <p>
-        If you would like to be notifed when the results are published, just click the button below.
+        If you would like to be notified when the results are published, just click the button below.
     </p>
 
     <form class="flex flex-col gap-2" hx-post="/subscribe">
