--- a/cmd/app/public/styles.css
+++ b/cmd/app/public/styles.css
@@ -751,6 +751,10 @@ select {
   margin-left: 0.5rem;
 }
 
+.mt-16 {
+  margin-top: 4rem;
+}
+
 .flex {
   display: flex;
 }
@@ -848,6 +852,11 @@ select {
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .text-center {
